implement basic ticket service
